added 7 day people tested card to testing page

--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -674,8 +674,7 @@ cards:
 
 # {{ StartDevOnlyBlock }}
 
-# not shown for UK (has separate radio button card)
-
+# not shown for UK
   - heading: PCR testing positivity
     cardType: chart
     locationAware:
@@ -686,8 +685,64 @@ cards:
     fullWidth: true
     abstract: >
       The percentage of people who received a PCR test in the previous 7 days who had at least one positive COVID-19 PCR 
-      test result, by specimen date. Individuals tested positive more than once are only counted once, on the date of their first
-      positive test.
+      test result, by specimen date. Individuals tested more than once in the period are only counted once in the denominator, 
+      and those with more than one positive test result in the period are only included once in the numerator.
+
+    download:
+      - uniqueCasePositivityBySpecimenDateRollingSum
+      - uniquePeopleTestedBySpecimenDateRollingSum
+
+    tabs:
+      - heading: 7-day periods
+        tabType: chart
+        fields:
+          - label: 7-day positivity (%)
+            value: uniqueCasePositivityBySpecimenDateRollingSum
+            tooltip: 7-day positivity by specimen date
+            type: line
+            colour: 0
+            fill: false
+
+      - heading: Data
+        tabType: table
+        fields:
+          - label: 7-day period ending
+            value: date
+            type: date
+            tooltip: End date for the 7-day period when the sample was taken from the person
+
+          - label: PCR postivity (%)
+            value: uniqueCasePositivityBySpecimenDateRollingSum
+            type: numeric
+            tooltip: 7-day positivity by specimen date
+
+          - label: People tested (PCR)  
+            value: uniquePeopleTestedBySpecimenDateRollingSum
+            type: numeric
+            tooltip: Number of people who received a PCR test in the period
+
+      - heading: About 
+        tabType: metadata
+        filename: cardMetadata/cases/cardCasesTimeSeries.md
+
+# {{ EndDevOnlyBlock }}
+
+##############################################################################################################################
+
+# {{ StartDevOnlyBlock }}
+
+# not shown for UK
+  - heading: People who received a PCR test in the previous 7 days
+    cardType: chart
+    locationAware:
+      excluded:
+        areaType:
+          - overview
+
+    fullWidth: true
+    abstract: >
+      The number of people who received a PCR test in the previous 7 days, by specimen date. 
+      Individuals tested more than once are only counted once.
 
     download:
       - uniqueCasePositivityBySpecimenDateRollingSum
@@ -698,15 +753,12 @@ cards:
         tabType: chart
         barType: overlay
         fields:
-          - label: 7-day positivity (%)
-            value: uniqueCasePositivityBySpecimenDateRollingSum
-            tooltip: 7-day positivity by specimen date
-            type: line
-            colour: 3
-            fill: false
-            rollingAverage:
-              window: 7
-              clipEnd: 3 #no of days to exclude for incomplete data
+          - label: Number of people tested (PCR)
+            value: uniquePeopleTestedBySpecimenDateRollingSum
+            tooltip: Number of people who received a PCR test in the previous 7 days
+            type: bar
+            colour: 0
+            rollingAverage: false
 
       - heading: Data
         tabType: table
@@ -714,7 +766,7 @@ cards:
           - label: 7-day period ending
             value: date
             type: date
-            tooltip: Date the sample was taken from the person
+            tooltip: End date for the 7-day period when the sample was taken from the person
 
           - label: PCR postivity (%)
             value: uniqueCasePositivityBySpecimenDateRollingSum
