--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -706,7 +706,7 @@ cards:
           - label: Number of people tested (PCR)
             value: uniquePeopleTestedBySpecimenDateRollingSum
             tooltip: Number of people who received a PCR test in the previous 7 days
-            type: bar
+            type: line
             colour: 0
             rollingAverage: false
             overlaying: "y"  # Which axis to overlay
