added 5 day cut off to the positivity card

--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -705,6 +705,7 @@ cards:
             colour: 7
             solidFill: true
             rollingAverage: false
+              clipEnd: 5
                       
           - label: 7-day positivity (%)
             value: uniqueCasePositivityBySpecimenDateRollingSum
