revised labels for healthcare headlines

--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -1,7 +1,7 @@
 headlineNumbers:
   - caption: Patients admitted
     valueItems:
-      - label: Latest daily
+      - label: Latest daily available
         value: newAdmissions
         tooltip: Daily number of COVID-19 patients admitted to hospital, reported on {date}
     
@@ -28,13 +28,13 @@ headlineNumbers:
 
   - caption: Patients in hospital
     valueItems:
-      - label: Latest daily
+      - label: Latest available
         value: hospitalCases
         tooltip: Number of COVID-19 patients currently in hospital, reported on {date}
 
   - caption: Patients on ventilation
     valueItems:
-      - label: Latest daily
+      - label: Latest available
         value: covidOccupiedMVBeds
         tooltip: Number of COVID-19 patients currently in mechanical ventilation beds, reported on {date}
     
