--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -1241,7 +1241,6 @@ cards:
 
 # {{ StartDevOnlyBlock }}
 
-cards:
   - heading: People who have received vaccinations
     cardType: multiAreaStatic
     locationAware:
@@ -1348,5 +1347,69 @@ cards:
           tabType: metadata
           filename: cardMetadata/cases/cardCasesTimeSeries.md
 
+
+# {{ EndDevOnlyBlock }}
+
+##############################################################################################################################
+
+# {{ StartDevOnlyBlock }}
+
+  - heading: People who have received vaccinations
+    cardType: multiAreaStatic
+    locationAware:
+      included: 
+        areaType:
+          - nation
+          - nhsRegion
+
+    fullWidth: true
+    abstract: >
+      Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date.
+      Individuals tested positive more than once are only counted once, on the date of 
+      their first positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
+
+    download:
+      - newPeopleReceivingFirstDose
+      - cumPeopleReceivingFirstDose
+      - newPeopleReceivingSecondDose
+      - cumPeopleReceivingSecondDose
+      
+    tabs:
+      - heading: Data
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: overview
+        
+        fields:
+          - label: 7-day period ending
+            value: date
+            type: date
+            tooltip: Date the vaccination was given
+
+          - label: Number received first dose in the week
+            value: newPeopleReceivingFirstDose
+            type: numeric
+            tooltip: Weekly number of new people receiving first dose of vaccine
+
+          - label: Total received first dose
+            value: cumPeopleReceivingFirstDose
+            type: numeric
+            tooltip: Cumulative number of people receiving first dose of vaccine
+
+          - label: Number received second dose in the week
+            value: newPeopleReceivingSecondDose
+            type: numeric
+            tooltip: Weekly number of new people receiving second dose of vaccine
+
+          - label: Total received second dose
+            value: cumPeopleReceivingFirstDose
+            type: numeric
+            tooltip: Cumulative number of people receiving second dose of vaccine        
+
+      - heading: About 
+        tabType: metadata
+        filename: cardMetadata/cases/cardCasesTimeSeries.md
 
 # {{ EndDevOnlyBlock }}
