--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -65,7 +65,8 @@ cards:
     abstract: >
       Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date.
       Individuals tested positive more than once are only counted once, on the date of 
-      their first positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
+      their first positive test. Data for the period ending 5 days before the date when the website was last updated with data for 
+      the selected area, highlighted in grey, is incomplete.
 
     download:
       - newCasesBySpecimenDate
@@ -237,7 +238,8 @@ cards:
     abstract: >
       Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date.
       Individuals tested positive more than once are only counted once, on the date of their first
-      positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
+      positive test. Data for the period ending 5 days before the date when the website was last updated with data for the 
+      selected area, highlighted in grey, is incomplete.
 
     download:
       - newCasesBySpecimenDate
