--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -1248,19 +1248,14 @@ cards:
         areaType:
           - overview
           - nation
-          - nhsRegion
 
     fullWidth: true
     abstract: >
-      Number of people with at least one positive COVID-19 test result (either lab-reported or lateral flow device), by specimen date.
-      Individuals tested positive more than once are only counted once, on the date of 
-      their first positive test. The most recent 5 days' data, highlighted in grey, are incomplete.
-
+      Number of people who have received a vaccination for COVID-19, by week in which the vaccine was administered.
+      
     download:
       - newPeopleReceivingFirstDose
       - cumPeopleReceivingFirstDose
-      - newPeopleReceivingSecondDose
-      - cumPeopleReceivingSecondDose
       
     tabs:
       - heading: Data
@@ -1280,17 +1275,7 @@ cards:
             value: cumPeopleReceivingFirstDose
             type: numeric
             tooltip: Cumulative number of people receiving first dose of vaccine
-
-          - label: Number received second dose in the week
-            value: newPeopleReceivingSecondDose
-            type: numeric
-            tooltip: Weekly number of new people receiving second dose of vaccine
-
-          - label: Total received second dose
-            value: cumPeopleReceivingFirstDose
-            type: numeric
-            tooltip: Cumulative number of people receiving second dose of vaccine        
-
+ 
       - heading: About 
         tabType: metadata
         filename: cardMetadata/cases/cardCasesTimeSeries.md
